<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AndroPad</string>

    <!-- Actions Menu -->
    <string name="action_settings">Settings</string>
    <string name="action_save_pad">Sauvegarder le pad</string>
    <string name="action_delete_pad">Supprimer le pad</string>

    <!-- Actions buttons -->
    <string name="action_launch_pad">Jouer</string>
    <string name="action_edit_pad">Editer</string>
    <string name="action_about">A propos</string>
    <string name="action_exit">Quitter</string>
    <string name="action_cancel">Annuler</string>
    <string name="action_apply">Valider</string>
    <string name="action_create">Créer</string>
    <string name="action_delete">Supprimer</string>
    <string name="action_create_pad">Ok</string>

    <!-- Image Descriptions -->
    <string name="img_description_logo">Logo</string>

    <!-- Activity Titles -->
    <string name="title_activity_select_pad">SelectPad</string>

    <!-- Labels -->
    <string name="lbl_select_pad">Sélectionner un Pad :</string>
    <string name="lbl_select_device">Sélectionner votre Ordinateur :</string>
    <string name="lbl_unknown">Unknown</string>
    <string name="lbl_connecting">Connection.</string>
    <string name="lbl_button_type">Sélectionner le bouton :</string>
    <string name="lbl_button_size">Sélectionner la taille :</string>
    <string name="lbl_button_mapping">Sélectionner le mapping :</string>
    <string name="lbl_create_pad">Créer un nouveau pad</string>
    <string name="lbl_about">Cette application a été réalisée par Fabrice Latterner et Clément Troesch dans le cadre du module Systèmes d\'exploitation avancés dispensé à l\'ITII (CNAM) Alsace.</string>
	<string name="lbl_bluetooth_connection">Connection en cours...</string>

    <!-- Activity Title -->
    <string name="title_activity_select_device">SelectDeviceActivity</string>
    <string name="title_activity_gaming">GamingActivity</string>
    <string name="title_activity_editing">EditingActivity</string>
    <string name="title_activity_edit_button">Modifier le bouton</string>
    <string name="title_activity_create_button">Créer un bouton</string>
    <string name="title_activity_about">AboutActivity</string>
    
    <string name="title_activity_pad_settings">PadSettingsActivity</string>
    
    <string name="lbl_searching">Recherche en cours...</string>
    
    <string name="img_description_itii_logo">ITII Logo</string>

</resources>