<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".EditButtonActivity" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/lbl_button_type"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_button_type" />

            <Spinner
                android:id="@+id/spinner_button_type"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/lbl_button_size"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_button_size" />

            <Spinner
                android:id="@+id/spinner_button_size"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/lbl_button_mapping"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_button_mapping" />

            <Spinner
                android:id="@+id/spinner_button_mapping"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/btn_cancel"
                    style="android:buttonBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/action_delete" />

                <Button
                    android:id="@+id/btn_apply"
                    style="android:buttonBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/action_apply" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>