<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/btn_exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:text="@string/action_exit" />

    <Button
        android:id="@+id/btn_about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_exit"
        android:layout_alignLeft="@+id/btn_exit"
        android:layout_alignRight="@+id/btn_exit"
        android:text="@string/action_about" />

    <Button
        android:id="@+id/btn_edit_pad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_about"
        android:layout_alignLeft="@+id/btn_about"
        android:layout_alignRight="@+id/btn_about"
        android:text="@string/action_edit_pad" />

    <Button
        android:id="@+id/btn_select_pad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_edit_pad"
        android:layout_alignLeft="@+id/btn_edit_pad"
        android:layout_alignRight="@+id/btn_edit_pad"
        android:text="@string/action_launch_pad" />

    <SurfaceView
        android:id="@+id/surface_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_select_pad"
        android:layout_alignLeft="@+id/btn_select_pad"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/btn_select_pad" />

</RelativeLayout>