<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SelectPadActivity" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/lbl_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_select_pad"
            android:textSize="@dimen/size_lbl_select_pad" />

        <ListView
            android:id="@+id/list_select_pad"
            android:layout_width="match_parent"
            android:layout_height="390dp" >
        </ListView>
    </LinearLayout>

    <Button
        android:id="@+id/btn_create_pad"
        android:layout_width="49dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/linearLayout1"
        android:text="@string/action_create_pad" />

    <EditText
        android:id="@+id/txt_create_pad_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linearLayout1"
        android:layout_alignParentBottom="true"
        android:layout_alignTop="@+id/btn_create_pad"
        android:layout_toLeftOf="@+id/btn_create_pad"
        android:ems="10"
        android:hint="@string/lbl_create_pad"
        android:inputType="text" >

        <requestFocus />
    </EditText>

</RelativeLayout>